--- a/hayabusa.ipynb
+++ b/hayabusa.ipynb
@@ -9,12 +9,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hayabusa\n"
+      "hayabusa\n",
+      "najmi\n"
      ]
     }
    ],
    "source": [
-    "print(\"hayabusa\")"
+    "print(\"hayabusa\")\n",
+    "print(\"najmi\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1+1)"
    ]
   }
  ],
