--- a/hayabusa.ipynb
+++ b/hayabusa.ipynb
@@ -21,19 +21,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "1\n"
      ]
     }
    ],
    "source": [
-    "print(1+1)"
+    "print(1)"
    ]
   }
  ],
